DBTOOLS-1668 code clean up